# fud

./: .gitignore  CMakeLists.txt  README.md  build_static-small_size.bat
include/: checker.h  colors.h  versions.h
src/: CMakeLists.txt  checker.cpp  main.cpp
testfiles/: test1.txt  test2.c
testfiles/web/: test3.MD  test4.html
